--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,15 +54,19 @@ header nav a:hover{
 /* Conteudo Principal */
 
 .principal {
-    margin: 0px 50px;
+    /* border: 1px solid white; */
+
+    margin: auto;
+    border: 1px solid white;
+    max-width: 800px;
     display: flex;
     justify-content: center;
     margin-top: 20px;
     flex-wrap: wrap-reverse;
     align-items: center;
     margin-bottom: 30px;
+    padding: 0px 50px;
     gap: 30px;
-    /* border: 1px solid white; */
 
 }
 
@@ -118,6 +122,7 @@ header nav a:hover{
 /* About */
 
 .about{
+    border: 1px solid white;
     max-width: 800px;
     margin: auto;
     margin-bottom: 30px;
@@ -232,9 +237,6 @@ header nav a:hover{
 }
 
 .carrosel > div{
-    /* animation: carrosel 5s linear infinite alternate; */
-    /* min-width: 223px;
-    max-width: 223px; */
     padding: 5px;
     border-radius: 10px;
     border: 1px solid black;
