--- a/estilos/style.css
+++ b/estilos/style.css
@@ -57,7 +57,7 @@ header nav a:hover{
     /* border: 1px solid white; */
 
     margin: auto;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     max-width: 800px;
     display: flex;
     justify-content: center;
@@ -122,7 +122,7 @@ header nav a:hover{
 /* About */
 
 .about{
-    border: 1px solid white;
+    /* border: 1px solid white; */
     max-width: 800px;
     margin: auto;
     margin-bottom: 30px;
