--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,24 +54,20 @@ header nav a:hover{
 /* Conteudo Principal */
 
 .principal {
-    /* border: 1px solid white; */
-
-    margin: auto;
-    /* border: 1px solid white; */
-    max-width: 800px;
+    margin: 0px 50px;
     display: flex;
     justify-content: center;
     margin-top: 20px;
     flex-wrap: wrap-reverse;
     align-items: center;
     margin-bottom: 30px;
-    padding: 0px 50px;
     gap: 30px;
+    /* border: 1px solid white; */
 
 }
 
 .principal div{
-    max-width: 400px;
+    max-width: 300px;
     width: 100%;
     /* border: 1px solid white; */
 }
@@ -122,11 +118,10 @@ header nav a:hover{
 /* About */
 
 .about{
-    /* border: 1px solid white; */
-    max-width: 800px;
+    max-width: 582px;
     margin: auto;
     margin-bottom: 30px;
-    padding: 0px 50px;
+    padding: 0px 20px;
     color: #a9a9ab;
 }
 
@@ -136,8 +131,7 @@ header nav a:hover{
 
 .about p{
     text-align: justify;
-    text-indent: 30px;
-    /* margin-left: 20px; */
+    margin-left: 20px;
 }
 
 .about p strong{
@@ -237,6 +231,9 @@ header nav a:hover{
 }
 
 .carrosel > div{
+    /* animation: carrosel 5s linear infinite alternate; */
+    /* min-width: 223px;
+    max-width: 223px; */
     padding: 5px;
     border-radius: 10px;
     border: 1px solid black;
@@ -331,6 +328,7 @@ footer img{
 footer img:hover{
     scale: 1.1;
 }
+
 
 @keyframes carrosel {
     from {
